--- a/mae281a_lectures.tex
+++ b/mae281a_lectures.tex
@@ -7,7 +7,7 @@
 \begin{document}
 
 \include{mae281a_lec01}
-% \include{mae281a_lec02}
+\include{mae281a_lec02}
 % \include{mae281a_lec03}
 % \include{mae281a_lec04}
 % \include{mae281a_lec05}
