lec 2: Fixed a couple of small things.

--- a/mae281a_lec02.tex
+++ b/mae281a_lec02.tex
@@ -14,7 +14,7 @@
 \setcounter{lecture}{1}
 \setcounter{chapter}{1}
 
-\lecture{Course Introduction}
+\lecture{Limit Cycles}
 
 \section{Limit Cycles Recap}
 Last lecture we studied linear and nonlinear limit cycles. An example of a linear limit cycle is a  harmonic oscillator given by
@@ -112,7 +112,7 @@ In the first case we have $\lambda_1\neq\lambda_2\neq0$. Figure \ref{fig:02stabl
   \subfloat[$\lambda_1>0,\lambda_2<0$, saddle point.]{
     \label{fig:02saddle1}\includegraphics[width=0.35\textwidth]{images/02saddle1}
   }
-  \caption{Case 1: $\lambda_1\neq\lambda_2\neq0$.}
+  \caption{Case 1 with $\lambda_1\neq\lambda_2\neq0$.}
   \label{fig:02case1}
 \end{figure}
 
@@ -129,7 +129,7 @@ In the second case we have $\lambda_{1,2}=\alpha\pm\ j\beta$. Figure \ref{fig:02
   \subfloat[$\alpha=0$, center point.]{
     \label{fig:02center2}\includegraphics[width=0.35\textwidth]{images/02center2}
   }
-  \caption{Case 2: $\lambda_{1,2} = \alpha\pm j\beta$.}
+  \caption{Case 2 with $\lambda_{1,2} = \alpha\pm j\beta$.}
   \label{fig:02case2}
 \end{figure}
 
@@ -149,7 +149,7 @@ In the third case we have $\lambda_1=\lambda_2=\lambda\neq0$ and we can have $k=
   \subfloat[$\lambda>0$, one independent eigenvector.]{
     \label{fig:02lgone3}\includegraphics[width=0.35\textwidth]{images/02lgone3}
   }
-  \caption{Case 3: $\lambda_1=\lambda_2=\lambda\neq0$.}
-  \label{fig:02case2}
+  \caption{Case 3 with $\lambda_1=\lambda_2=\lambda\neq0$.}
+  \label{fig:02case3}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
