Added notes and images for lectures 3, 4 and 5.

--- a/mae281a_lec01.tex
+++ b/mae281a_lec01.tex
@@ -75,6 +75,7 @@ $\lozenge$
 \end{figure}
 
 \section{Finite Escape Time}
+\label{sec:01fet}
 \begin{example}
 A linear unstable system is given by
 $$\dot{x} = x \Rightarrow x(t) = x_0e^t$$
