--- a/mae281a_lectures.tex
+++ b/mae281a_lectures.tex
@@ -2,15 +2,15 @@
 \input preamble
 \input header
 
-% \includeonly{mae281a_lec01}
+\includeonly{mae281a_lec05}
 
 \begin{document}
 
 \include{mae281a_lec01}
 \include{mae281a_lec02}
-% \include{mae281a_lec03}
-% \include{mae281a_lec04}
-% \include{mae281a_lec05}
+\include{mae281a_lec03}
+\include{mae281a_lec04}
+\include{mae281a_lec05}
 % \include{mae281a_lec06}
 % \include{mae281a_lec07}
 % \include{mae281a_lec08}
