Very small changes, like saving images.

--- a/mae281a_lec01.tex
+++ b/mae281a_lec01.tex
@@ -40,7 +40,7 @@ For terminology Khalil considers $\dot{x}=f(t,x)$ to be a \textit{non-autonomous
 Time invariant systems are described by the relationship
 $$\dot{x}=f(x)$$
 \begin{definition}
-Equilibrium: A point $x=x^\ast$ such that
+\textit{Equilibrium}: A point $x=x^\ast$ such that
 $$f(x) = 0$$
 \end{definition}
 
