lec 6: finished the notes that I got from Nick Morozovsky. No images this time.

--- a/mae281a_lec04.tex
+++ b/mae281a_lec04.tex
@@ -117,6 +117,7 @@ $\lozenge$
 \end{example}
 
 \section{Gr\"onwall(-Bellman) Inequality}
+\label{sec:04gronwall}
 The proof of this lemma is located in the appendix of Khalil. There are three versions of this lemma. We can think of the function $y$ as the energy of the system.
 
 \subsection{Version 1 - General}
