--- a/mae281a_lectures.tex
+++ b/mae281a_lectures.tex
@@ -2,7 +2,7 @@
 \input preamble
 \input header
 
-% \includeonly{mae281a_lec05}
+\includeonly{mae281a_lec06}
 
 \begin{document}
 
@@ -11,7 +11,7 @@
 \include{mae281a_lec03}
 \include{mae281a_lec04}
 \include{mae281a_lec05}
-% \include{mae281a_lec06}
+\include{mae281a_lec06}
 % \include{mae281a_lec07}
 % \include{mae281a_lec08}
 % \include{mae281a_lec09}
