Typed up notes for Lectures 7 and 8 without including figures. Also created a few simple Python scripts to generate figures from older lectures where I could because they look so much better than the ones I create by hand with Inkscape. Hopefully more of my images will be done with Python and fewer with Inkscape in the future. I still have notes up through Lecture 12 that I hope to get finished soon.

--- a/mae281a_lec02.tex
+++ b/mae281a_lec02.tex
@@ -15,6 +15,7 @@
 \setcounter{chapter}{1}
 
 \lecture{Limit Cycles}
+\label{lec:mae281a_lec02}
 
 \section{Limit Cycles Recap}
 Last lecture we studied linear and nonlinear limit cycles. An example of a linear limit cycle is a  harmonic oscillator given by
