--- a/mae281a_lec04.tex
+++ b/mae281a_lec04.tex
@@ -64,7 +64,8 @@ $\lozenge$
 
 \begin{figure}[ht!]
 	\centering
-	\includegraphics[width=.5\textwidth]{images/04infslope}
+	%\includegraphics[width=.5\textwidth]{images/04infslope}
+	\includegraphics[width=.5\textwidth]{images/plotCubeRootX}
 	\caption{Plot of $f(x) = \sqrt[3]{x}$.}
 	\label{fig:04infslope}
 \end{figure}
