--- a/mae281a_lec05.tex
+++ b/mae281a_lec05.tex
@@ -51,7 +51,8 @@ $\lozenge$
 
 \begin{figure}[ht!]
 	\centering
-	\includegraphics[width=.5\textwidth]{images/05notlip}
+	%\includegraphics[width=.5\textwidth]{images/05notlip}
+	\includegraphics[width=.5\textwidth]{images/plotSqrtX}
 	\caption{The function $f(x) = \sqrt{x}$ is not Lipschitz.}
 	\label{fig:05notlip}
 \end{figure}
