Added notes for Lecture 9 but not figures, except for one that is generated using Python.

--- a/mae281a_lectures.tex
+++ b/mae281a_lectures.tex
@@ -14,12 +14,9 @@
 \include{mae281a_lec06}
 \include{mae281a_lec07}
 \include{mae281a_lec08}
-% \include{mae281a_lec09}
+\include{mae281a_lec09}
 % \include{mae281a_lec10}
 % \include{mae281a_lec11}
 % \include{mae281a_lec12}
-% \include{mae281a_lec13}
-% \include{mae281a_lec14}
-% \include{mae281a_lec15}
 
 \end{document}
